Footer height adjustment to avoid scrollbars

--- a/bpam/bpam/static/bpam/bpam.css
+++ b/bpam/bpam/static/bpam/bpam.css
@@ -10,9 +10,9 @@ body {
     min-height: 100%;
     height: auto;
     /* Negative indent footer by its height */
-    margin: 0 auto -80px;
+    margin: 0 auto -84px;
     /* Pad bottom by footer height */
-    padding: 0 0 80px;
+    padding: 0 0 84px;
 }
 
 .site-footer {
